@@ -163,12 +163,7 @@ object CompileServerLauncher {
             .flatMap(_.getVMArguments.asScala).toSeq
           val extraJvmParameters = CompileServerVmOptionsProvider.implementations.iterator
             .flatMap(_.vmOptionsFor(project)).toSeq
-          //see SCL-20064
-          val workaroundForSecurityManagerForJDK18 =
-            if (jdk.version.exists(_.isAtLeast(JavaSdkVersion.JDK_18)))
-              Seq("-Djava.security.manager=allow")
-            else Nil
-          buildProcessParameters ++ extraJvmParameters ++ workaroundForSecurityManagerForJDK18
+          buildProcessParameters ++ extraJvmParameters
         }
 
         // SCL-18193
